--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Discover the vibrant world of South Indian chutneys with TLH Foods. Our guide explores chutneys from Karnataka, Maharashtra, and other South Indian states, highlighting their ingredients, preparation methods, and health benefits." />
+  <meta name="keywords"
+    content="South Indian chutneys, Karnataka, Maharashtra, chutney recipes, Indian cuisine, TLH Foods, pudi, pudi idli, orange  chutney" />
+  <meta name="author" content="Rahul Sheelavantar" />
+  <meta property="og:title" content="The Lingayat House" />
+  <meta property="og:description"
+    content="Explore South Indian chutneys with TLH Foods. Learn about various chutneys, their ingredients, and benefits, and dive into regional traditions and culinary expertise." />
+  <meta property="og:image" content="/path/to/your/image.jpg" /> <!-- Optional -->
+  <meta property="og:url" content="https://www.tlhfoods.com" /> <!-- Optional -->
+  <title>The Lingayat House</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
